--- a/app/src/main/res/layout/activity_attendance__ds.xml
+++ b/app/src/main/res/layout/activity_attendance__ds.xml
@@ -28,12 +28,13 @@
         android:id="@+id/percentage"
         android:layout_width="155dp"
         android:layout_height="52dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="36dp"
         android:autoText="false"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
@@ -83,11 +84,35 @@
         android:id="@+id/estimate"
         android:layout_width="325dp"
         android:layout_height="84dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="15dp"
         android:hint="Estimate:"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/tick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/attended_button"
+        android:text="Attended"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/total_classes" />
+
+    <Button
+        android:id="@+id/untick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="115dp"
+        android:background="@drawable/missed_button"
+        android:text="MISSED"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/total_classes_num" />
 
 </android.support.constraint.ConstraintLayout>
