--- a/app/src/main/res/layout/activity_attendance_co.xml
+++ b/app/src/main/res/layout/activity_attendance_co.xml
@@ -6,4 +6,113 @@
     android:layout_height="match_parent"
     tools:context=".attendance_co">
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <ProgressBar
+            android:id="@+id/prog"
+            style="?android:progressBarStyleHorizontal"
+            android:layout_width="365dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:foregroundGravity="center"
+            android:progress="100"
+            android:progressDrawable="@drawable/circular_green" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/percentage"
+        android:layout_width="155dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="36dp"
+        android:autoText="false"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.50"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/classes_attended"
+        android:layout_width="122dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="Classes Attended :"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/percentage" />
+
+    <TextView
+        android:id="@+id/classes_attended_num"
+        android:layout_width="122dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/percentage" />
+
+    <TextView
+        android:id="@+id/total_classes"
+        android:layout_width="122dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="24dp"
+        android:text="Total Classes:"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/classes_attended" />
+
+    <TextView
+        android:id="@+id/total_classes_num"
+        android:layout_width="122dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/classes_attended_num" />
+
+    <TextView
+        android:id="@+id/estimate"
+        android:layout_width="325dp"
+        android:layout_height="84dp"
+        android:layout_marginBottom="15dp"
+        android:hint="Estimate:"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/tick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/attended_button"
+        android:text="Attended"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/total_classes" />
+
+    <Button
+        android:id="@+id/untick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="115dp"
+        android:background="@drawable/missed_button"
+        android:text="MISSED"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/total_classes_num" />
+
 </android.support.constraint.ConstraintLayout>
