--- a/app/src/main/res/layout/cgpa_calculator.xml
+++ b/app/src/main/res/layout/cgpa_calculator.xml
@@ -102,8 +102,9 @@
         android:layout_above="@+id/calsgpa"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="119dp"
-        android:layout_marginEnd="119dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="121dp"
+        android:layout_marginEnd="116dp"
         android:layout_marginBottom="48dp"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
